# glob-test

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
tests/: insta.rs  usage.rs
tests/snapshots/: insta__usage__inputs__a.snap  insta__usage__inputs__b.snap  insta__usage__inputs__nested__c.snap
tests/ui/: fail_async.rs  fail_async.stderr  fail_const.rs  fail_const.stderr  fail_generic.rs  fail_generic.stderr  fail_pattern.rs  fail_pattern.stderr  fail_unsafe.rs  fail_unsafe.stderr  pass_basic.rs  pass_custom_param.rs  pass_directory_glob.rs  pass_files_inside_dirs.rs  pass_mixed_files_and_dirs.rs
