[package]
name = "glob_test"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/jprochazk/glob-test"
license = "MIT OR Apache-2.0"
description = "Generate tests from a glob pattern"
publish = true
rust-version = "1.88"

[lib]
proc-macro = true

[dependencies]
glob = "0.3.3"
proc-macro2 = { version = "1.0.95", features = ["span-locations"] }

[dev-dependencies]
insta = "1.43.1"
trybuild = "1"
